# bills-collector

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.celery-beat  Pipfile  README.md  app.py  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  postcss.config.js  pyproject.toml  sonar-project.properties  tailwind.config.js  valkey.conf  webpack.config.js
.cursor/: PROJECT_SUMMARY.md
.github/workflows/: build.yml
bills_collector/: app.py  config.py  extensions.py  models.py
bills_collector/integrations/: __init__.py  google_client.py  llm_client.py  zoho_client.py
bills_collector/routes/: api.py  auth.py  connect.py  views.py
bills_collector/static/src/: app.css  app.js
bills_collector/tasks/: inbox_tasks.py
bills_collector/templates/: 400.html  404.html  500.html  callback.html  home.html  home.html.j2  inbox_rules.html  index.html  index.html.j2  login.html  signup.html
bills_collector/templates/email/: new-bills-today.html
docs/: README.md  overview.md
docs/architecture/: structure.md
docs/background/: README.md
docs/database/: schema.md
docs/testing/: google-api-mocking.md  integration-tests.md
docs/workflows/: README.md
migrations/versions/: 12a488ebad1e_create_bills_table.py  2a6830b2df5a_.py  531480a39842_.py  7dc82f7cc2ba_.py  ca4ea575996e_.py  f443ac42e864_.py
tests/: conftest.py
tests/fixtures/: gmail_attachment.json  gmail_message_get.json  gmail_messages_list.json
tests/functional/: test_auth.py
tests/integration/: test_gmail_api_integration.py
tests/unit/: test_models.py
