[tool.poetry]
name = "bills-collector"
version = "0.1.0"
description = ""
authors = ["Neeraj Verma <github@smurfpandey.me>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
environs = "^11.0.0"
flask = "^3.0.2"
flask-login = "^0.6.3"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
authlib = "^1.3.0"
requests = "^2.31.0"
flask-bcrypt = "^1.0.1"
sentry-sdk = {extras = ["flask"], version = "^2.0.1"}
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
pikepdf = "^9.2.1"
google-api-python-client = "^2.127.0"
google-auth = "^2.29.0"
flask-wtf = "^1.2.1"
gunicorn = "^23.0.0"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
