[project]
name = "bills-collector"
version = "0.1.0"
description = ""
authors = [{ name = "Neeraj Verma", email = "github@smurfpandey.me" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "environs>=11.0.0,<12",
    "flask>=3.0.2,<4",
    "flask-login>=0.6.3,<0.7",
    "flask-migrate>=4.0.5,<5",
    "flask-sqlalchemy>=3.1.1,<4",
    "authlib>=1.3.0,<2",
    "requests>=2.31.0,<3",
    "flask-bcrypt>=1.0.1,<2",
    "sentry-sdk[celery,flask]>=2.0.1,<3",
    "celery[redis]>=5.4.0,<6",
    "psycopg[binary, pool]>=3.1.18,<4",
    "pikepdf>=9.9.0,<10",
    "google-api-python-client>=2.127.0,<3",
    "google-auth>=2.29.0,<3",
    "flask-wtf>=1.2.1,<2",
    "gunicorn>=23.0.0,<24",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "ty>=0.0.1a12",
]
test = [
    "pytest-randomly>=3.15.0,<4",
    "pytest>=8.3.2,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
